# vehicles-ros-pkg

./: README.md
arduino_driver/: CMakeLists.txt  package.xml
arduino_driver/sketches/buddy_driver/: buddy_driver.ino
arduino_driver/sketches/buddy_driver_mega/: buddy_driver_mega (copy).ino  buddy_driver_mega.ino
arduino_driver/sketches/pwm_driver/: pwm_driver.ino
buddy/: .gitignore  CMakeLists.txt  package.xml
buddy/arduino/: arduino.conf  dallas.conf
buddy/arduino/libraries/comms_lib/: BuddyMsgs.h  SerialHandler.cpp  SerialHandler.h
buddy/arduino/libraries/sampler_lib/: AdcSampler.h  DallasTemp.cpp  DallasTemp.h  LinearSensor.h
buddy/arduino/micro_battery_cylinder/: micro_battery_cylinder.ino
buddy/arduino/micro_vision_cylinder/: micro_vision_cylinder.ino
buddy/arduino/uno_master_cylinder/: uno_master_cylinder.ino
buddy/data/allocation/: thrusters.yaml  xvconfig.yaml
buddy/data/control/: control_standard.xml
buddy/data/control/params/: controllers_standard.yaml
buddy/data/devices/: 99-buddy-devices.rules  arduino_diagnostics.xml  brushless_driver.xml  device_config.bash  microstrain.xml  navquest.xml  static_frames.xml  ublox.xml
buddy/data/dynamics/: buddy.yaml
buddy/data/models/xacro/: buddy_base.xacro  rviz_buddy.urdf.xacro  uwsim_buddy.urdf.xacro
buddy/data/navigation/: navigation_standard.xml
buddy/data/navigation/params/: nav_standard.yaml
buddy/data/upstart/: buddy.conf  env.bash
buddy/launch/: buddymore_topside.launch
buddy/launch/mws/: buddy_standard_mws.launch
buddy/scripts/: download_mesh.sh
ethernet_relay_driver/: CMakeLists.txt  package.xml
ethernet_relay_driver/include/labust/drivers/: ethernetRelayDriver.hpp
ethernet_relay_driver/src/: buddymore.py  ethernet_relay_driver.cpp
lupis/: CMakeLists.txt  package.xml
lupis/launch/: uros_mission_change.launch
lupis/src/: uros_logger.cpp  uros_mission_change.cpp
pladypos/: CMakeLists.txt  package.xml
pladypos/arduino/motor_driver/: motor_driver.ino
pladypos/data/allocation/: xconfig.yaml
pladypos/data/camera/: camera.xml  camera_surface.yaml  camera_underwater.yaml
pladypos/data/control/: control_standard.xml
pladypos/data/control/params/: controllers_standard.yaml
pladypos/data/devices/: 99-pladypos-devices.rules  arduino_driver.xml  device_config.bash  novatel.xml  pladypos_eth.xml  relay_module.xml  spatial.xml  static_frames.xml  ublox.xml  usbl_master.xml  usbl_runtime.yaml
pladypos/data/dynamics/: pladypos_sonar_video.yaml
pladypos/data/mission/: mission_standard.xml
pladypos/data/models/sdf/: pladypos.sdf
pladypos/data/models/xacro/: pladypos_base.xacro  rviz_pladypos.urdf.xacro  uwsim_pladypos.urdf.xacro
pladypos/data/multi_master/: pladypos_basic.sync  pladypos_caddy.sync
pladypos/data/navigation/params/: nav_standard.yaml
pladypos/data/primitives/: control_config.bash  primitives_standard.xml
pladypos/data/primitives/params/: controllers_standard.yaml
pladypos/data/sonar/: sonar.xml
pladypos/data/topside/: neptus_bridge.xml  pladypos_default.perspective
pladypos/data/upstart/: env.bash  pladypos.conf  upstart
pladypos/include/labust/vehicles/: BatteryAlarmNode.hpp  BuddyTest_v1.hpp  PlaDyPosNode_v2.hpp  PlaDyPosNode_v3.hpp  ScaleAllocation.hpp  VRTest_v1.hpp
pladypos/launch/: buddy_thruster.yaml  buddyv1.launch  buddyv1_vel.launch  pladyposv2_driver.launch  pladyposv3_driver.launch  vrv1.launch
pladypos/launch/mws/: pladypos_standard_mws.launch
pladypos/launch/topside/: pladypos_topside_standard.launch
pladypos/launch/vision/: sonar_video.launch
pladypos/scripts/: download_mesh.sh
pladypos/src/: BatteryAlarmNode.cpp  BuddyTest_v1.cpp  PlaDyPosNode.cpp  PlaDyPosNode_v2.cpp  PlaDyPosNode_v3.cpp  VRTest_v1.cpp  uros_logger.cpp
scripts/: install_scripts.sh  uninstall_scripts.sh  update_scripts.sh  vehicle-start  vehicle-stop
scripts/etc/: hosts
videoray/: CMakeLists.txt  CMakeLists.txt~  package.xml
videoray/include/labust/vehicles/: Allocation.hpp  BMotor.hpp  BMotor2.hpp  CSRMap.hpp  Pro4Driver.hpp  VRPro.hpp  videorayComm.hpp
videoray/launch/: aggregator.launch  aggregator.yaml  test.launch  videoray.launch
videoray/src/: VRPro.cpp  videoray_node.cpp
videoray/src/brushless/: BMotor.cpp  BMotor2.cpp  Pro4Driver.cpp
videoray/src/test/: old_uv_moos_apps.xml  vr_test.cpp
